--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="box">
             <p>Me empresta 20 conto?</p>
             <div class="buttons-container">
-                <button>Sim</a></button>
+                <a href='https://www.youtube.com/watch?v=WicWDuCLpcY'><button>Sim</button></a>
                 <button id="no">Não</button>
             
             </div>
